# ai-personality

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  KNOWN-ISSUES.md  README.md  SETUP.md  SKILL.md  smithery.yaml  sync-personality.ps1
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
docs/: AUTO-PERSONALITY-LOAD.md  PUBLISHING.md
docs/adr/: ADR-001-mcp-server-architecture.md
personality/: identity.md  memories.md  relationships.md  rules.md  traits.md  values.md
scripts/: persona.ps1
server/: README.md  package-lock.json  package.json  tsconfig.json
server-py/: README.md  opencode.json  pyproject.toml
server-py/src/ai_personality/: __init__.py  __main__.py  defaults.py  personality.py  rag.py  server.py  setup.py  skills.py  validation.py
server/src/: defaults.ts  index.ts  personality.ts  rag.ts  setup.ts  skills.ts  types.ts  validation.ts
